[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hacktribe-editor-api"
version = "0.0.1"
authors = [
  { name="bangcorrupt", email="bangcorrupt@gmail.com" },
]
description = "An API for controlling and editing Hacktribe."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "construct",
]
keywords = [
    "hacktribe",
    "electribe",
    "synth",
    "sampler",
    "editor",
    "midi",
    "api",
]

[project.urls]
Homepage = "https://github.com/bangcorrupt/hacktribe-editor-api"
Issues = "https://github.com/bangcorrupt/hacktribe-editor-api/issues"


# [project.scripts]
# ht-cli = "hacktribe-editor:ht_cli"
